another spacing fix (lol)

--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ section p:last-of-type {
 }
 
 p {
-    margin: 0 50px;
+    margin: 50px;
     font-size: large;
 }
 
